Fix footer text alignment

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -26,6 +26,8 @@ span {
     color: #756b5a;
     font-size: 0.8em;
     margin: 0.5em;
+    text-align: center;
+    line-height: 1.5em;
 }
 
 @media screen and (max-width: 430px){
